syntax = "proto3";

package blog;
option go_package = "blog/blogpb";

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}
message CreateBlogRequest { Blog blog = 1; }

message CreateBlogResponse {
  Blog blog = 1; // will have a blog id
}

message ReadBlogRequest { string blog_id = 1; }

message ReadBlogResponse { Blog blog = 1; }

message UpdateBlogRequest { Blog blog = 1; }

message UpdateBlogResponse { Blog blog = 1; }

message DeleteBlogRequest { string blog_id = 1; }

message DeleteBlogResponse { string blog_id = 1; }

message ListBlogRequest {}

message ListBlogResponse { Blog blog = 1; }

message ListBlogRepeatedRequest {}

message ListBlogRepeatedResponse { repeated Blog blog = 1; }

service BlogService {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse);

  // return NOT_FOUND if not found
  rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse);

  rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse);

  rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse);

  // https://stackoverflow.com/questions/43167762/how-to-return-an-array-in-protobuf-service-rpc
  rpc ListBlog(ListBlogRequest) returns (stream ListBlogResponse);

  // set a response message which will use a repeated object
  rpc ListBlogs(ListBlogRepeatedRequest) returns (ListBlogRepeatedResponse) {}
}